# CryptoShloma

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake.yml  install_qt.yml
cmake/: deploy.cmake  stacktrace.cmake  utils.cmake  version.cmake  version.in
include/: Models  init_logger.h
installer/: installer.pro
installer/config/: config.xml
installer/resources/: cryptoshloma.qrc
launcher/: CMakeLists.txt  ProcessObserver.cpp  ProcessObserver.h  main.cpp
resources/: default.cfg
resources/qml/: Emulation.qml  ExchangePage.qml  ExchangePageSection.qml  HanukkahTable.qml  SettingsItem.qml  TopBar.qml  main.qml
resources/qml/BaseElements/: BusyIndicatorStyled.qml  DoubleSpinBox2Prec.qml  DoubleSpinBox8Prec.qml  EmptyLabel.qml  HeaderLabel.qml  ListViewDelegateStyled.qml  ListViewHeaderStyled.qml  ListViewStyled.qml  PasswordField.qml  SearchField.qml  Separator.qml  TabBarIcon.qml  TableToolButton.qml  ToolBarIcon.qml  qmldir
resources/qml/CommonLibs/: common.js  qmldir
resources/qml/ModelViews/: BalanceView.qml  OpenOrdersView.qml  OrdersListView.qml  OrdersView.qml  SpreadMarketsView.qml  TradePairPopup.qml  TradingHistorySelectedPairView.qml  TradingHistoryView.qml  TradingPairsView.qml  VolumeMarketsView.qml  qmldir
share/deploy/linux/: run.sh
share/sql/: dbCryptoShloma.sqlite  dbCryptoShloma.sqlite.sql
src/: crud.cpp  crud.h  cryptoshloma.cpp  cryptoshloma.h  cryptoshloma.qrc  emulator.cpp  emulator.h  main.cpp
src/algo/: hanukkah.cpp  hanukkah.h  i_analytics_algo.cpp  i_analytics_algo.h  i_trade_algo.cpp  i_trade_algo.h  spreder.cpp  spreder.h  trend_searcher.cpp  trend_searcher.h
src/algo/hanukkah/: i_step.cpp  i_step.h  step.cpp  step.h  zero_step.cpp  zero_step.h
src/api/: binance_api.cpp  binance_api.h  binance_api_controller.cpp  binance_api_controller.h  binance_api_p.cpp  binance_api_p.h  i_exchange_api.cpp  i_exchange_api.h  i_exchange_api_controller.h  i_exchange_api_entry.h  temporary_orders_table.cpp  temporary_orders_table.h
src/base/: balance.cpp  balance.h  currency.cpp  currency.h  market.cpp  market.h  order.cpp  order.h
src/boilerplate/: base_entry.h  singly_linked_stack.h  strong_typedef.h
src/common/: constants.h  encrypt.cpp  encrypt.h  enums.h  settings_manager.cpp  settings_manager.h  stacktrace.cpp  stacktrace.h  utils.h
src/models/: balances_model.cpp  balances_model.h  balances_proxy_model.cpp  balances_proxy_model.h  buy_orders_proxy_model.cpp  buy_orders_proxy_model.h  exchange_pool.cpp  exchange_pool.h  market_orders_model.cpp  market_orders_model.h  market_orders_proxy_model.cpp  market_orders_proxy_model.h  markets_model.cpp  markets_model.h  open_orders_model.cpp  open_orders_model.h  open_orders_proxy_model.cpp  open_orders_proxy_model.h  sell_orders_proxy_model.cpp  sell_orders_proxy_model.h  spread_markets_proxy_model.cpp  spread_markets_proxy_model.h  trade_history_model.cpp  trade_history_model.h  trade_history_proxy_model.cpp  trade_history_proxy_model.h  trading_pairs_proxy_model.cpp  trading_pairs_proxy_model.h  volume_markets_proxy_model.cpp  volume_markets_proxy_model.h
src/network/: http_client.cpp  http_client.h  websocket_client.cpp  websocket_client.h
src/storage/: balances_storage.cpp  balances_storage.h  market_orders_storage.cpp  market_orders_storage.h  markets_storage.cpp  markets_storage.h  open_orders_storage.cpp  open_orders_storage.h  trade_history_storage.cpp  trade_history_storage.h
